cros: Fix menu positioning bug

Fixes menu positioning miscalculations in MenuController.

Bug: 852153
Change-Id: I494bf3b80e33712d515c1369a0fa1be9e3c3e90b
Reviewed-on: https://chromium-review.googlesource.com/1101966
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567639}
Former-commit-id: f9a165049a574d2a3bb7d4cb48526635843c9a35