ash/shelf/shelf_view.h
@@ -306,9 +306,11 @@ class ASH_EXPORT ShelfView : public views::View,
   void UpdateOverflowRange(ShelfView* overflow_view) const;
 
   // Gets the menu anchor rect for menus. |source| is the view that is
-  // asking for a menu, |location| is the location of the event.
+  // asking for a menu, |location| is the location of the event, |context_menu|
+  // is whether the menu is for a context or application menu.
   gfx::Rect GetMenuAnchorRect(const views::View& source,
-                              const gfx::Point& location) const;
+                              const gfx::Point& location,
+                              bool context_menu) const;
 
   // Gets the menu anchor position for a menu. |for_item| is true if the menu is
   // for an item on the shelf, or false if the menu is for the shelf view
