ash/shelf/shelf_view_test_api.cc
@@ -117,10 +117,10 @@ void ShelfViewTestAPI::RunMessageLoopUntilAnimationsDone() {
   shelf_view_->bounds_animator_->RemoveObserver(observer.get());
 }
 
-gfx::Rect ShelfViewTestAPI::GetMenuAnchorRect(
-    const views::View& source,
-    const gfx::Point& location) const {
-  return shelf_view_->GetMenuAnchorRect(source, location);
+gfx::Rect ShelfViewTestAPI::GetMenuAnchorRect(const views::View& source,
+                                              const gfx::Point& location,
+                                              bool context_menu) const {
+  return shelf_view_->GetMenuAnchorRect(source, location, context_menu);
 }
 
 bool ShelfViewTestAPI::CloseMenu() {
